--- a/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
+++ b/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
@@ -90,12 +90,12 @@
 
                                         </div>
 
-                                        <div class="emailbtns">
-                                            <div class="trck-order">
+                                        <div class="emailbtns subscribe">
+                                            <div class="trck-order editsubscribe">
                                                 <a href="#"> <button class="trck-order-btn">Edit Subscription</button></a>
                                             </div>
 
-                                            <div class="view-invoice">
+                                            <div class="view-invoice cancelsubscribe">
                                                 <a href="#"> <button class="cancel-subscrp"><i class="fa fa-trash"></i>Cancel Subscription</button></a>
                                             </div>
 
