--- a/src/app/components/auth/account-settings/orders/orders.component.html
+++ b/src/app/components/auth/account-settings/orders/orders.component.html
@@ -47,7 +47,7 @@
                                                     <!-- <span>Amanda Hall</span>
                                                     <span>1455 S State St</span>
                                                     <span>Orem, UT 84097, US</span> -->
-                                                     <span>{{item.address1}}</span>
+                                                    <span>{{item.address1}}</span>
                                                     <span>{{item.address2}}</span>
                                                 </p>
                                             </div>
@@ -62,7 +62,7 @@
                                                     <h4>Order Summary:</h4>
                                                     <table class="table order-summary">
                                                         <tbody>
-                                                             <tr *ngFor="let detail of item.details">
+                                                            <tr *ngFor="let detail of item.details">
                                                                 <td style="width:40px;">
                                                                     <img src="/assets/product-ordered.png" />
                                                                 </td>
@@ -95,7 +95,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="emailbtns">
+                                        <div class="emailbtns trackOrder">
                                             <div class="trck-order">
                                                 <a href="#"> <button class="trck-order-btn">Track Order</button></a>
                                             </div>
