--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -8,7 +8,7 @@ div#main-menu {
 
 div#main-menu li a {
     font-family: "g-demibold";
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: #2aa8bf;
 }
 
@@ -158,7 +158,6 @@ ul.right-menu li i.fas.fa-user-circle {
     color: #b3b3b3;
 }
 
-
 ul.search-result.ng-star-inserted {
     z-index: -1px;
     flex-direction: column;
@@ -175,14 +174,13 @@ ul.search-result.ng-star-inserted {
     padding: 10px 11px;
 }
 
-
 ul.search-result.hide {
-   display: none;
+    display: none;
 }
+
 li.productlist.ng-star-inserted {
     min-width: 200px;
 }
-
 
 ul.subhide.search-result {
     display: none;
@@ -209,7 +207,7 @@ ul.search-result li {
     min-width: 230px !important;
 }
 
-div#main-menu li  ul.search-result li a:hover {
+div#main-menu li ul.search-result li a:hover {
     color: #444 !important;
 }
 
@@ -342,6 +340,11 @@ a.nav-link.active {
     ul.navbar-nav.other-links li a {
         padding: 8px 14px !important;
     }
+}
+
+span.profil-mob-icon svg {
+    overflow: hidden;
+    vertical-align: sub;
 }
 
 @media screen and (max-width: 700px) {
