--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -83,18 +83,18 @@
                 <ul class="right-menu">
                     <li class="Search-demo-tour-class">
                         <div class="searchbar">
-                            <input type="text" class="form-control"  [(ngModel)]="searchText"  (keyup)="getSearchProduct(searchText)" placeholder="Search" />
-                           
+                            <input type="text" class="form-control" [(ngModel)]="searchText" (keyup)="getSearchProduct(searchText)" placeholder="Search" />
+
                             <i class="fa fa-search"></i>
                         </div>
-                     
-                            <ul [className]="flag ?  'subshow search-result' : ' subhide  search-result'"  >  
-                                <li class="productlist" *ngFor="let product of products | slice:0:15; let i=index">  
-                                    <a (click)="onselectProduct(product)">{{product.itemCode}}</a>  
-                                </li>             
-                            </ul>  
-                      
-                    
+
+                        <ul [className]="flag ?  'subshow search-result' : ' subhide  search-result'">
+                            <li class="productlist" *ngFor="let product of products | slice:0:15; let i=index">
+                                <a (click)="onselectProduct(product)">{{product.itemCode}}</a>
+                            </li>
+                        </ul>
+
+
                         <!-- <a [routerLink]="['/store/search-products']"></a> -->
                     </li>
                     <li class="cart-item Cart-Item-demo-tour-class"><a [routerLink]="['/store/cart']"><i
@@ -149,11 +149,18 @@
                     <li class="nav-item">
                         <a class="nav-link" [routerLink]="['/enrollment']" [routerLinkActive]="['active']" (click)="isMobileMenu=false;">Join</a>
                     </li>
-                    <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link" (click)="isMobileMenu=false;">SIGN IN</a></li>
+                    <li class="nav-item" *ngIf="!user">
+                        <a [routerLink]="['/sign-in']" class="log-links nav-link" (click)="isMobileMenu=false;">
+                            <span class="profil-mob-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                                <path id="Path_2015" data-name="Path 2015" d="M921.9,17.2a7.3,7.3,0,0,1-6-3.2c0-2,4-3.1,6-3.1s6,1.1,6,3.1A7.3,7.3,0,0,1,921.9,17.2Zm0-14.2a2.946,2.946,0,0,1,3,3,3,3,0,0,1-6,0A2.946,2.946,0,0,1,921.9,3Zm0-3a10,10,0,1,0,10,10A10.029,10.029,0,0,0,921.9,0Z" transform="translate(-911.9)" fill="#1cb1c5"/>
+                                </svg>
+                        </span> SIGN IN</a>
+                    </li>
                     <!-- <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link" (click)="isMobileMenu= false;">Log out</a></li> -->
 
                 </ul>
-                <ul class="navbar-nav other-links">
+                <ul class="navbar-nav other-links shortMenu" *ngIf="user">
                     <li class="nav-item Shop-demo-tour">
                         <a class="nav-link" [routerLink]="['account-settings/profile']" [routerLinkActive]="['active']">Profile</a>
                     </li>
